--- a/varmepumperens/index.html
+++ b/varmepumperens/index.html
@@ -1,77 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Varmepumperens – kampanje 1399,- | HS Rens & Vedlikehold</title>
-  <meta name="description" content="Profesjonell rens av varmepumpe (innedel/utedel). Kampanjepris 1399,- i Bergen & omegn.">
-  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Varmepumperens – HS Rens & Vedlikehold</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
   <header class="site-header">
-    <div class="container header-row">
-      <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold"></a>
-      <button class="nav-toggle" aria-expanded="false" aria-label="Meny"><span class="bar"></span><span class="bar"></span><span class="bar"></span></button>
-      <nav class="site-nav" id="site-nav">
-        <a href="/">Ventilasjonsrens</a>
-        <a aria-current="page" href="/varmepumperens/">Varmepumperens</a>
+    <div class="container">
+      <a href="/" class="logo">
+        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo">
+      </a>
+      <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav">☰</button>
+      <nav id="site-nav" class="site-nav">
+        <a href="/ventilasjon/">Ventilasjonsrens</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
         <a href="/resultater/">Resultater</a>
         <a href="/om-oss/">Om oss</a>
         <a href="/kontakt-oss/">Kontakt oss</a>
-        <a class="cta-phone" href="tel:+4792098742">Ring: 92 09 87 42</a>
       </nav>
+      <div class="header-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></div>
     </div>
   </header>
 
   <main>
-    <section class="hero container">
-      <p class="badge">Kampanje</p>
-      <h1>Varmepumperens – <span style="white-space:nowrap">1399,-</span></h1>
-      <p>Skikkelig rens av innedel (og enkel sjekk av utedel) gir bedre effekt, lavere strømforbruk og renere luft.</p>
-      <p><a class="btn" href="/kontakt-oss/">Bestill rens</a></p>
-    </section>
-
-    <section class="container cards">
-      <article class="card">
-        <h2>Dette gjør vi</h2>
-        <ul>
-          <li>Full rens av innedel (vifte, lameller, dryppbakke)</li>
-          <li>Skånsom kjemi og grundig skyll</li>
-          <li>Kort funksjonstest og enkel sjekk av utedel</li>
-        </ul>
-      </article>
-      <article class="card">
-        <h2>Fordeler</h2>
-        <ul>
-          <li>Mer effekt og jevnere varme/kjøling</li>
-          <li>Mindre lukt og bedre inneluft</li>
-          <li>Kan redusere strømforbruk</li>
-        </ul>
-      </article>
-      <article class="card">
-        <h2>For borettslag</h2>
-        <p>Vi setter opp avtaler per oppgang/leilighet med fast pris og enkel booking.</p>
-      </article>
-    </section>
-
     <section class="container">
-      <h2>Før–etter</h2>
-      <div class="gallery">
-        <figure><img src="/images/for-vp-01.jpg" alt="Før rens"><figcaption>Før</figcaption></figure>
-        <figure><img src="/images/etter-vp-01.jpg" alt="Etter rens"><figcaption>Etter</figcaption></figure>
-      </div>
+      <h1>Rens av varmepumpe</h1>
+      <p>Dyp rens av innedel og utedel for bedre effekt, lavere strømforbruk og renere luft.</p>
+      <p><strong>Kampanjepris: 1399,-</strong></p>
+      <p>Vi tilbyr også årlige serviceavtaler for borettslag, sameier og bedrifter.</p>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container footer-grid">
-      <div><strong>HS Rens & Vedlikehold</strong><br>Rollandslia 221, 5115 Ulset</div>
-      <div><a href="tel:+4792098742">+47 92 09 87 42</a><br><a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
-      <div><a class="btn btn-small" href="/kontakt-oss/">Kontakt oss</a></div>
+    <div class="container">
+      <p><strong>HS Rens & Vedlikehold</strong><br>
+      Rollandslia 221, 5115 Ulset<br>
+      +47 92 09 87 42 · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
     </div>
-    <div class="container small">© <span id="y"></span> HS Rens & Vedlikehold</div>
   </footer>
-  <script>document.getElementById('y').textContent = new Date().getFullYear();</script>
-  <script src="/assets/js/site.js"></script>
+
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
