--- a/resultater/index.html
+++ b/resultater/index.html
@@ -1,69 +1,76 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Resultater – Før & Etter | HS Rens & Vedlikehold</title>
-  <meta name="description" content="Se før- og etterbilder fra ventilasjonsrens og varmepumperens utført av HS Rens & Vedlikehold.">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-  <style>
-    .gallery{display:grid;gap:16px}
-    @media(min-width:900px){.gallery{grid-template-columns:repeat(2,1fr)}}
-    figure{background:#fff;border-radius:12px;overflow:hidden;border:1px solid #e6eef4}
-    figcaption{padding:10px 12px;color:#475569}
-    .pair{display:grid;gap:8px;padding:8px}
-    @media(min-width:720px){.pair{grid-template-columns:1fr 1fr}}
-    .pair img{width:100%;display:block;border-radius:8px}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resultater – HS Rens & Vedlikehold</title>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-
   <header class="site-header">
-    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo" style="height:80px;max-height:100px;"></a>
-    <nav class="site-nav">
-      <a href="/tjenester/">Ventilasjonsrens</a>
-      <a href="/varmepumperens/">Varmepumperens</a>
-      <a aria-current="page" href="/resultater/">Resultater</a>
-      <a href="/om-oss/">Om oss</a>
-      <a href="/kontakt-oss/">Kontakt oss</a>
-    </nav>
-    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
+    <div class="container">
+      <a href="/" class="logo">
+        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo">
+      </a>
+      <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav">☰</button>
+      <nav id="site-nav" class="site-nav">
+        <a href="/ventilasjon/">Ventilasjonsrens</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
+        <a href="/resultater/" aria-current="page">Resultater</a>
+        <a href="/om-oss/">Om oss</a>
+        <a href="/kontakt-oss/">Kontakt oss</a>
+      </nav>
+      <div class="header-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></div>
+    </div>
   </header>
 
-  <main class="container">
-    <h1>Før & etter</h1>
-    <p>Legg dine bilder i <code>/images/</code> og bytt filnavn under.</p>
+  <main>
+    <section class="container">
+      <h1>Før–etter: slik blir resultatet</h1>
+      <p>Her ser du ekte bilder fra rens av kanaler og varmepumper. Last opp dine bilder i <code>/images/</code> og bytt ut filnavnene under.</p>
 
-    <div class="gallery">
-      <!-- Sett 1 -->
-      <figure>
-        <div class="pair">
-          <img src="/images/for-1.jpg"  alt="Før rens – kanal">
-          <img src="/images/etter-1.jpg" alt="Etter rens – kanal">
-        </div>
-        <figcaption>Kanal – før og etter rens</figcaption>
-      </figure>
+      <div class="gallery">
+        <!-- Bytt src til dine filer i /images/ -->
+        <figure class="ba">
+          <img src="/images/for-1.jpg" alt="Før rens kanal">
+          <figcaption>Før</figcaption>
+        </figure>
+        <figure class="ba">
+          <img src="/images/etter-1.jpg" alt="Etter rens kanal">
+          <figcaption>Etter</figcaption>
+        </figure>
 
-      <!-- Sett 2 -->
-      <figure>
-        <div class="pair">
-          <img src="/images/for-2.jpg"  alt="Før rens – varmepumpe">
-          <img src="/images/etter-2.jpg" alt="Etter rens – varmepumpe">
-        </div>
-        <figcaption>Varmepumpe – før og etter</figcaption>
-      </figure>
+        <figure class="ba">
+          <img src="/images/for-2.jpg" alt="Før rens varmepumpe">
+          <figcaption>Før</figcaption>
+        </figure>
+        <figure class="ba">
+          <img src="/images/etter-2.jpg" alt="Etter rens varmepumpe">
+          <figcaption>Etter</figcaption>
+        </figure>
 
-      <!-- Kopier blokken over for flere sett -->
-    </div>
+        <figure class="ba">
+          <img src="/images/for-3.jpg" alt="Før rens kanal">
+          <figcaption>Før</figcaption>
+        </figure>
+        <figure class="ba">
+          <img src="/images/etter-3.jpg" alt="Etter rens kanal">
+          <figcaption>Etter</figcaption>
+        </figure>
+      </div>
 
-    <p style="margin-top:16px"><a class="btn" href="/kontakt-oss/">Be om tilbud</a></p>
+      <p><a class="button" href="/kontakt-oss/">Be om tilbud</a></p>
+    </section>
   </main>
 
   <footer class="site-footer">
-    <div class="footer-brand">HS Rens & Vedlikehold</div>
-    <div>Rollandslia 221, 5115 Ulset</div>
-    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
+    <div class="container">
+      <p><strong>HS Rens & Vedlikehold</strong><br>
+      Rollandslia 221, 5115 Ulset<br>
+      +47 92 09 87 42 · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+    </div>
   </footer>
 
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
