--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -1,58 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Om oss – HS Rens & Vedlikehold</title>
-  <meta name="description" content="Lokalt firma i Bergen som leverer ventilasjonsrens og varmepumperens – med gode rutiner, ryddighet og dokumentert resultat.">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-  <style>
-    .cols{display:grid;gap:16px}
-    @media(min-width:900px){.cols{grid-template-columns:1.2fr .8fr}}
-    .panel{background:#fff;border:1px solid #e6eef4;border-radius:12px;padding:16px}
-  </style>
+  <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <body>
-
   <header class="site-header">
-    <a class="logo" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo" style="height:80px;max-height:100px;"></a>
-    <nav class="site-nav">
-      <a href="/tjenester/">Ventilasjonsrens</a>
-      <a href="/varmepumperens/">Varmepumperens</a>
-      <a href="/resultater/">Resultater</a>
-      <a aria-current="page" href="/om-oss/">Om oss</a>
-      <a href="/kontakt-oss/">Kontakt oss</a>
-    </nav>
-    <a class="cta-phone" href="tel:+4792098742">+47 92 09 87 42</a>
+    <div class="container">
+      <a href="/" class="logo">
+        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo">
+      </a>
+      <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav">☰</button>
+      <nav id="site-nav" class="site-nav">
+        <a href="/ventilasjon/">Ventilasjonsrens</a>
+        <a href="/varmepumperens/">Varmepumperens</a>
+        <a href="/resultater/">Resultater</a>
+        <a href="/om-oss/" aria-current="page">Om oss</a>
+        <a href="/kontakt-oss/">Kontakt oss</a>
+      </nav>
+      <div class="header-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></div>
+    </div>
   </header>
 
-  <main class="container">
-    <h1>Om oss</h1>
-    <div class="cols">
-      <section class="panel">
-        <h2>Lokalt og ryddig</h2>
-        <p>Vi leverer ventilasjonsrens og varmepumperens i Bergen og omegn. Målet er trygge, pene og effektive anlegg – med kort responstid og tydelig dialog.</p>
-        <ul class="checklist">
-          <li>Dokumenterte resultater</li>
-          <li>Ryddig arbeidsprosess</li>
-          <li>Serviceavtaler for borettslag og næring</li>
-        </ul>
-        <p><a class="btn" href="/kontakt-oss/">Ta kontakt</a></p>
-      </section>
-      <aside class="panel">
-        <h2>Kontakt</h2>
-        <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
-        <p><strong>Telefon:</strong> <a href="tel:+4792098742">+47 92 09 87 42</a></p>
-        <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
-      </aside>
-    </div>
+  <main>
+    <section class="container">
+      <h1>Om HS Rens & Vedlikehold</h1>
+      <p>Vi er et lokalt firma i Bergen som leverer grundig rens av ventilasjonsanlegg og varmepumper for
+        privat, borettslag/sameier og næring. Målet er trygge anlegg, bedre luft og fornøyde kunder.</p>
+
+      <h2>Derfor velger kundene oss</h2>
+      <ul class="checklist">
+        <li>Skikkelig rens – ikke bare «overflatisk vask»</li>
+        <li>Dokumentasjon før–etter med bilder</li>
+        <li>Faste serviceavtaler for borettslag, sameier og bedrifter</li>
+        <li>Rask respons i Bergen & omegn</li>
+      </ul>
+
+      <div class="cta">
+        <a class="button" href="/kontakt-oss/">Kontakt oss</a>
+        <a class="button secondary" href="/resultater/">Se resultater</a>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
-    <div class="footer-brand">HS Rens & Vedlikehold</div>
-    <div>Rollandslia 221, 5115 Ulset</div>
-    <div><a href="tel:+4792098742">+47 92 09 87 42</a> • <a href="mailto:post@hsrens.no">post@hsrens.no</a></div>
+    <div class="container">
+      <p><strong>HS Rens & Vedlikehold</strong><br>
+      Rollandslia 221, 5115 Ulset<br>
+      +47 92 09 87 42 · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+    </div>
   </footer>
 
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
