--- a/index.html
+++ b/index.html
@@ -1,47 +1,119 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HS Rens & Vedlikehold</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>HS Rens & Vedlikehold – Ventilasjonsrens i Bergen & omegn</title>
+  <meta name="description" content="Profesjonell ventilasjonsrens for bolig, borettslag og næring i Bergen & omegn. Bedre luft, mindre støv og trygg drift." />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 <body>
+
   <header class="site-header">
-    <div class="container">
-      <a href="/" class="logo">
-        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo">
-      </a>
-      <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav">☰</button>
-      <nav id="site-nav" class="site-nav">
-        <a href="/ventilasjon/">Ventilasjonsrens</a>
-        <a href="/varmepumperens/">Varmepumperens</a>
-        <a href="/resultater/">Resultater</a>
-        <a href="/om-oss/">Om oss</a>
-        <a href="/kontakt-oss/">Kontakt oss</a>
+    <div class="container header-inner">
+      <a class="brand" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold" /></a>
+      <button class="nav-toggle" aria-label="Åpne meny" aria-expanded="false">
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+      </button>
+      <nav id="site-nav" class="main-nav" role="navigation">
+        <ul>
+          <li><a aria-current="page" href="/">Ventilasjonsrens</a></li>
+          <li><a href="/varmepumperens/">Varmepumperens</a></li>
+          <li><a href="/borettslag/">Borettslag & næring</a></li>
+          <li><a href="/resultater/">Resultater</a></li>
+          <li><a href="/om-oss/">Om oss</a></li>
+          <li><a href="/kontakt-oss/">Kontakt oss</a></li>
+          <li class="nav-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></li>
+        </ul>
       </nav>
-      <div class="header-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></div>
     </div>
   </header>
 
   <main>
-    <section class="hero">
+    <section class="hero section">
       <div class="container">
-        <span class="tag">Bergen & omegn</span>
+        <span class="pill">Bergen & omegn</span>
         <h1>Ventilasjonsrens for bolig, borettslag og næring</h1>
         <p>Vi renser kanaler, ventiler og avtrekk skikkelig – for bedre luft, mindre støv og trygg drift. Alltid profesjonelt utført arbeid.</p>
+        <div class="actions">
+          <a class="btn" href="/kontakt-oss/">Få et uforpliktende tilbud</a>
+          <a class="btn ghost" href="tel:+4792098742">Ring: 92 09 87 42</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container cards">
+        <article class="card">
+          <h3>Ventilasjonsrens</h3>
+          <p>Fjerning av støv og avleiringer i kanaler og ventiler. Ryddig og effektivt – med hensyn til beboere.</p>
+        </article>
+        <article class="card">
+          <h3>Rens av varmepumpe</h3>
+          <p>Dyp rens for bedre effekt, lavere strøm og renere luft. <strong>Kampanje 1 399,-</strong>.</p>
+          <a class="btn ghost" href="/varmepumperens/">Les mer</a>
+        </article>
+        <article class="card">
+          <h3>Serviceavtaler</h3>
+          <p>Årlige avtaler med plan, fast pris og dokumentasjon til styret.</p>
+          <a class="btn ghost" href="/borettslag/">Se avtaler</a>
+        </article>
+      </div>
+    </section>
+
+    <section class="section alt">
+      <div class="container grid-2">
+        <div>
+          <h2>Hvorfor rense?</h2>
+          <ul class="check">
+            <li>Bedre inneluft og mindre støv</li>
+            <li>Tryggere og mer effektiv ventilasjon</li>
+            <li>Mindre lukt og støy fra anlegget</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Før og etter</h2>
+          <div class="before-after">
+            <figure><img src="/images/for-01.jpg" alt="Før rens – kanal"><figcaption>Før</figcaption></figure>
+            <figure><img src="/images/etter-01.jpg" alt="Etter rens – kanal"><figcaption>Etter</figcaption></figure>
+          </div>
+          <p>Se flere eksempler under <a href="/resultater/">resultater</a>.</p>
+        </div>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p><strong>HS Rens & Vedlikehold</strong><br>
-      Rollandslia 221, 5115 Ulset<br>
-      +47 92 09 87 42 · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+    <div class="container footer-grid">
+      <div class="footer-brand">
+        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold" />
+        <p>Ekspert på ventilasjonsrens.</p>
+        <div class="socials">
+          <a href="#" target="_blank" aria-label="Facebook" rel="noopener"><svg viewBox="0 0 24 24"><path d="M22 12.06C22 6.48 17.52 2 11.94 2S2 6.48 2 12.06c0 5.02 3.66 9.18 8.44 9.94v-7.03H7.9v-2.9h2.54V9.41c0-2.5 1.49-3.89 3.78-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.9h-2.34V22c4.78-.76 8.44-4.92 8.44-9.94z"/></svg></a>
+          <a href="#" target="_blank" aria-label="Instagram" rel="noopener"><svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3.5a5.5 5.5 0 1 1 0 11 5.5 5.5 0 0 1 0-11zm6-1.3a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg></a>
+          <a href="mailto:post@hsrens.no" aria-label="Send e-post"><svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg></a>
+        </div>
+      </div>
+      <div class="footer-info">
+        <h4>HS Rens &amp; Vedlikehold</h4>
+        <p>Rollandslia 221, 5115 Ulset</p>
+        <p><a href="tel:+4792098742">+47 92 09 87 42</a> · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+      </div>
+      <nav class="footer-nav" aria-label="Bunnmeny">
+        <h4>Navigasjon</h4>
+        <ul>
+          <li><a href="/">Forside</a></li>
+          <li><a href="/varmepumperens/">Varmepumperens</a></li>
+          <li><a href="/borettslag/">Borettslag & næring</a></li>
+          <li><a href="/resultater/">Resultater</a></li>
+          <li><a href="/om-oss/">Om oss</a></li>
+          <li><a href="/kontakt-oss/">Kontakt oss</a></li>
+        </ul>
+      </nav>
     </div>
+    <div class="footer-copy">© 2025 HS Rens &amp; Vedlikehold AS</div>
   </footer>
 
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
