--- a/kontakt-oss/index.html
+++ b/kontakt-oss/index.html
@@ -1,61 +1,103 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kontakt oss – HS Rens & Vedlikehold</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Kontakt oss | HS Rens & Vedlikehold</title>
+  <meta name="description" content="Kontakt HS Rens & Vedlikehold for ventilasjonsrens og varmepumperens i Bergen & omegn. Telefon +47 92 09 87 42." />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
 </head>
 <body>
+
   <header class="site-header">
-    <div class="container">
-      <a href="/" class="logo">
-        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold logo">
-      </a>
-      <button class="nav-toggle" aria-expanded="false" aria-controls="site-nav">☰</button>
-      <nav id="site-nav" class="site-nav">
-        <a href="/ventilasjon/">Ventilasjonsrens</a>
-        <a href="/varmepumperens/">Varmepumperens</a>
-        <a href="/resultater/">Resultater</a>
-        <a href="/om-oss/">Om oss</a>
-        <a href="/kontakt-oss/">Kontakt oss</a>
+    <div class="container header-inner">
+      <a class="brand" href="/"><img src="/images/hs-02.png" alt="HS Rens & Vedlikehold" /></a>
+      <button class="nav-toggle" aria-label="Åpne meny" aria-expanded="false">
+        <span class="bar"></span><span class="bar"></span><span class="bar"></span>
+      </button>
+      <nav id="site-nav" class="main-nav" role="navigation">
+        <ul>
+          <li><a href="/">Ventilasjonsrens</a></li>
+          <li><a href="/varmepumperens/">Varmepumperens</a></li>
+          <li><a href="/borettslag/">Borettslag & næring</a></li>
+          <li><a href="/resultater/">Resultater</a></li>
+          <li><a href="/om-oss/">Om oss</a></li>
+          <li><a aria-current="page" href="/kontakt-oss/">Kontakt oss</a></li>
+          <li class="nav-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></li>
+        </ul>
       </nav>
-      <div class="header-phone"><a href="tel:+4792098742">+47 92 09 87 42</a></div>
     </div>
   </header>
 
   <main>
-    <section class="container">
-      <h1>Kontakt oss</h1>
-      <p><strong>HS Rens & Vedlikehold</strong></p>
-      <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
-      <p><strong>Telefon:</strong> <a href="tel:+4792098742">+47 92 09 87 42</a></p>
-      <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+    <section class="section">
+      <div class="container grid-2">
+        <div>
+          <h1>HS Rens &amp; Vedlikehold</h1>
+          <p><strong>Adresse:</strong> Rollandslia 221, 5115 Ulset</p>
+          <p><strong>Telefon:</strong> <a href="tel:+4792098742">+47 92 09 87 42</a></p>
+          <p><strong>E-post:</strong> <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
 
-      <form class="contact-form">
-        <label for="name">Navn:</label>
-        <input type="text" id="name" name="name" required>
-        <label for="email">E-post:</label>
-        <input type="email" id="email" name="email" required>
-        <label for="message">Melding:</label>
-        <textarea id="message" name="message" required></textarea>
-        <button type="submit">Send melding</button>
-      </form>
+          <div class="map">
+            <iframe title="Kart – Rollandslia 221" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=Rollandslia%20221,%205115%20Ulset&output=embed"></iframe>
+          </div>
+        </div>
 
-      <div class="map">
-        <iframe src="https://www.google.com/maps?q=Rollandslia+221,+5115+Ulset&output=embed" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <!-- Netlify form -->
+        <form name="kontakt" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="form">
+          <input type="hidden" name="form-name" value="kontakt">
+          <p class="hidden"><label>Ikke fyll ut: <input name="bot-field" /></label></p>
+
+          <h2>Send oss en melding</h2>
+          <label>Navn
+            <input type="text" name="navn" required>
+          </label>
+          <label>E-post
+            <input type="email" name="epost" required>
+          </label>
+          <label>Telefon
+            <input type="tel" name="telefon">
+          </label>
+          <label>Melding
+            <textarea name="melding" rows="5" required></textarea>
+          </label>
+          <button class="btn" type="submit">Send</button>
+        </form>
       </div>
     </section>
   </main>
 
   <footer class="site-footer">
-    <div class="container">
-      <p><strong>HS Rens & Vedlikehold</strong><br>
-      Rollandslia 221, 5115 Ulset<br>
-      +47 92 09 87 42 · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+    <div class="container footer-grid">
+      <div class="footer-brand">
+        <img src="/images/hs-02.png" alt="HS Rens & Vedlikehold" />
+        <p>Ekspert på ventilasjonsrens.</p>
+        <div class="socials">
+          <a href="#" target="_blank" aria-label="Facebook" rel="noopener"><svg viewBox="0 0 24 24"><path d="M22 12.06C22 6.48 17.52 2 11.94 2S2 6.48 2 12.06c0 5.02 3.66 9.18 8.44 9.94v-7.03H7.9v-2.9h2.54V9.41c0-2.5 1.49-3.89 3.78-3.89 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.9h-2.34V22c4.78-.76 8.44-4.92 8.44-9.94z"/></svg></a>
+          <a href="#" target="_blank" aria-label="Instagram" rel="noopener"><svg viewBox="0 0 24 24"><path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm6-1.3a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/></svg></a>
+          <a href="mailto:post@hsrens.no" aria-label="Send e-post"><svg viewBox="0 0 24 24"><path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"/></svg></a>
+        </div>
+      </div>
+      <div class="footer-info">
+        <h4>HS Rens &amp; Vedlikehold</h4>
+        <p>Rollandslia 221, 5115 Ulset</p>
+        <p><a href="tel:+4792098742">+47 92 09 87 42</a> · <a href="mailto:post@hsrens.no">post@hsrens.no</a></p>
+      </div>
+      <nav class="footer-nav" aria-label="Bunnmeny">
+        <h4>Navigasjon</h4>
+        <ul>
+          <li><a href="/">Forside</a></li>
+          <li><a href="/varmepumperens/">Varmepumperens</a></li>
+          <li><a href="/borettslag/">Borettslag & næring</a></li>
+          <li><a href="/resultater/">Resultater</a></li>
+          <li><a href="/om-oss/">Om oss</a></li>
+          <li><a href="/kontakt-oss/">Kontakt oss</a></li>
+        </ul>
+      </nav>
     </div>
+    <div class="footer-copy">© 2025 HS Rens &amp; Vedlikehold AS</div>
   </footer>
 
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
